--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@wagmi/connectors": "^5.1.15",
     "@wagmi/core": "^2.13.8",
     "@web3modal/wagmi": "^5.1.11",
+    "axios": "^1.7.7",
     "bignumber.js": "^4.0.2",
     "pinia": "^2.1.7",
     "viem": "^2.21.18",
